@@ -22,6 +22,7 @@ version <next>:
 - musx demuxer
 - aix demuxer
 - remap filter
+- hash and framehash muxers
 
 version 3.0:
 - Common Encryption (CENC) MP4 encoding and decoding support
